force-app/main/default/objects/Performance_Review__c/fields/Achievements__c.field-meta.xml
<CustomField>
    <fullName>Achievements__c</fullName>
    <label>Achievements</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>