force-app/main/default/objects/Performance_Review__c/fields/Final_Rating__c.field-meta.xml
<CustomField>
    <fullName>Final_Rating__c</fullName>
    <label>Final Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outstanding Performer</fullName>
            </value>
            <value>
                <fullName>High Performer</fullName>
            </value>
            <value>
                <fullName>Solid Performer</fullName>
            </value>
            <value>
                <fullName>Developing Performer</fullName>
            </value>
            <value>
                <fullName>Low Performer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>