force-app/main/default/objects/Performance_Review__c/fields/HR_Calibration__c.field-meta.xml
<CustomField>
    <fullName>HR_Calibration__c</fullName>
    <label>HR Calibration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Adjusted Upward</fullName>
            </value>
            <value>
                <fullName>Adjusted Downward</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>