force-app/main/default/objects/Performance_Review__c/fields/Manager_Rating__c.field-meta.xml
<CustomField>
    <fullName>Manager_Rating__c</fullName>
    <label>Manager Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outstanding</fullName>
            </value>
            <value>
                <fullName>Exceeds Expectations</fullName>
            </value>
            <value>
                <fullName>Meets Expectations</fullName>
            </value>
            <value>
                <fullName>Needs Improvement</fullName>
            </value>
            <value>
                <fullName>Unsatisfactory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>