force-app/main/default/objects/Performance_Review__c/fields/Performance_Evaluation_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Performance_Evaluation_End_Date__c</fullName>
    <label>Performance Evaluation End Date</label>
    <type>Date</type>
</CustomField>