force-app/main/default/objects/Performance_Review__c/fields/Performance_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Performance_Feedback__c</fullName>
    <label>Performance Feedback</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>