force-app/main/default/objects/Performance_Review__c/fields/Review_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Review_Cycle__c</fullName>
    <label>Review Cycle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>