force-app/main/default/objects/Performance_Review__c/fields/Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Review_Status__c</fullName>
    <label>Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Self Assessment Submitted</fullName>
            </value>
            <value>
                <fullName>Manager Review In Progress</fullName>
            </value>
            <value>
                <fullName>Manager Review Completed</fullName>
            </value>
            <value>
                <fullName>HR Calibration In Progress</fullName>
            </value>
            <value>
                <fullName>HR Calibration Completed</fullName>
            </value>
            <value>
                <fullName>Finalized</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>